CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
PROJECT(DepthCameraCapture)

IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
  ADD_DEFINITIONS(-std=c++11)
ENDIF()

FIND_PACKAGE(Voxel 0.1.0 REQUIRED)

ADD_EXECUTABLE(DepthCapture DepthCapture.cpp)

TARGET_INCLUDE_DIRECTORIES(DepthCapture PUBLIC ${VOXEL_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(DepthCapture ${VOXEL_LIBRARIES})
